Remove old deprecated function registry
Additionally introduce BWC function resolving helper when function`
symbols are retrieved from older nodes without any signature.
In that case a full function matching will be performed instead of
a fast by-signature lookup.
As this only happens in mixed clusters (rolling upgrade) for a short
period, this should be neglectable.